feat: create a cmake preset for optionally building test targets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,12 @@
 # ensures that Cmake will adopt the behaviour of the listed version.
 cmake_minimum_required(VERSION 4.0)
+option(BUILD_TESTING "Enable testing and build tests" TRUE)
 
 # Define project Look for C++ compiler
-project(jade CXX)
-
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+project(jade CXX) # sets the name for project
+set(CMAKE_CXX_STANDARD 20) # sets the compiler standard to CPP 20
+set(CMAKE_CXX_STANDARD_REQUIRED ON) # cmake fails if the compiler does not support versioning
 set(CMAKE_CXX_EXTENSIONS OFF)
-
 
 ### Dependencies ###
 
@@ -22,8 +21,7 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
 # Create the library
-add_library(jade
-        )
+add_library(jade)
 
 target_sources(
         jade
@@ -44,9 +42,12 @@ target_sources(
 target_compile_features(jade PUBLIC cxx_std_20)
 
 # Tests
-enable_testing()
-add_subdirectory(tests)
+if (BUILD_TESTING)
+        enable_testing() # command generates necessary metadata in the build tree in order for ctest to find and run tests.
+        add_subdirectory(tests) #
+endif ()
 
 # Example
 add_subdirectory(example)
+
 
