chore: add Jade_Matrix_Test to CMakeLists.txt

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 4.0)
 
 add_executable(jade_test
         Jade_Test.cpp
+        Jade_Matrix_Test.cpp
 )
 
 target_link_libraries(jade_test GTest::gtest_main jade)
